--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <div id="header">
 
 <div class="omg">
-    <img class="omg2" src="" alt="" width="65px" height="45px">
+    <img class="omg2" src="" alt="logo" width="65px" height="45px">
 </div>
 
     <ul class="nav">
